# llm-labs

./: .env.example  .gitignore  README.md  pyproject.toml
lab1/: README.md  graph.py  lab1.md  models.py  notebook.ipynb  notebook.py  test_arxiv_researcher_node.py  test_web_researcher_node.py
lab1/mcp/: sandbox_server.py  search_server.py
lab2/: README.md  lab2.md  notebook.ipynb  notebook.py
