[project]
name = "llm-labs"
version = "0.1.0"
description = "Labs of course NLP and LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.17.8",
    "pydantic>=2.12.4",
]

[dependency-groups]
lab1 = [
    "ddgs>=9.9.1",
    "fastmcp>=2.13.1",
    "langchain>=1.0.7",
    "langgraph>=1.0.3",
    "markitdown>=0.1.3",
    "mcp-run-python>=0.0.21",
]
